--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "template_python"
+name = "pdoc_ai"
 version = "0.0.1"
 requires-python = ">=3.12.0"
 authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
@@ -12,24 +12,21 @@ dependencies = [
     "instructor>=1.7.0",
     "openai>=1.58.1",
     "tiktoken>=0.8.0",
-    "ak-requests",
     "rich>=13.9.4",
     "typer>=0.15.1",
-    "cryptography>=44.0.0",
+    "requests>=2.32.3",
+    "gitingest>=0.1.2",
 ]
 
 [project.urls]
-Home = "https://github.com/rpakishore/template_python"
+Home = "https://github.com/rpakishore/pdoc_ai"
 
 [project.scripts]
-cli="template_python.cli_app:app"
-config="template_python.cli_app:test"
+cli="pdoc_ai.cli_app:app"
+config="pdoc_ai.cli_app:test"
 
 [tool.setuptools.dynamic]
 description = {file = "README.md"}
-
-[tool.uv.sources]
-ak-requests = { git = "https://github.com/rpakishore/ak_requests" }
 
 [dependency-groups]
 dev = [
